[tool.poetry]
name = "aboultt"
version = "0.1.0"
description = ""
authors = ["Andrés <andres.sandoval@alaya.cl>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.55.1"
chatterbot = "^1.1.0"
structlog = "^20.1.0"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.14.0"
pylint = "^2.5.2"
colorama = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
